[package]
name = "jokers"
version = "0.1.1"
edition = "2024"
authors = ["ysoseriouz"]
license = "MIT"
description = "API wrapper for https://v2.jokeapi.dev/"
readme = "README.md"
keywords = ["api", "joke"]

[dependencies]
reqwest = { version = "0.12", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }
thiserror = "2.0.12"

[features]
default = ["async"]
async = ["dep:reqwest"]
blocking = ["reqwest/blocking"]
yaml = ["dep:serde_yaml"]

[dev-dependencies]
tokio = { version = "1.44.1", features = ["rt", "macros"] }
wiremock = "0.6.3"
